--- a/capst2/docker-compose.yaml
+++ b/capst2/docker-compose.yaml
@@ -2,11 +2,11 @@ version: "3.7"
    
 services:
   db:
-    image: mysql
+    image: postgres
     environment:
-      - MYSQL_DB=caps2
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=Tomodachi25
+        POSTGRES_DB: "caps"
+        POSTGRES_USER: "postgres"
+        POSTGRES_PASSWORD: "admin"
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
